# ICIV

./: .gitignore  CATALOGO_DE_DATOS.md  CHECKLIST_DEFENSA.md  FUENTES_DE_DATOS.md  IMIV-VEN_Formato_Entrega_FINAL.docx  PLAN_DE_ACCION_REVISION_JURADO_ICIV.md  PROYECTO_ICIV_MASTER.md  README.md  RESPUESTAS_JURADO.md  VARIABLES_MASTER.md  iciv_dashboard.html  index.html
iciv/: .env.example  .gitignore  ANALISIS_FRECUENCIA_TEMPORAL.md  CLAUDE.md  EVALUACION_JURADO.md  FUENTES_DEFINITIVAS.md  PLAN_FUENTES_ADICIONALES.md  README.md  main.py  pyproject.toml
iciv/bitacora/: 05_auditoria_fuentes_datos.md  06_guia_viirs_luminosidad_nocturna.md  README.md
iciv/config/: settings.yaml
iciv/postman/: ICIV_Ambiente.postman_environment.json  ICIV_Coleccion.postman_collection.json
iciv/scripts/: backfill_blackmarble_parallel.py  backtest_pulse_forecast.py  build_dataset_package.py  check_pulse_inputs.py  defense_timeline.py  external_validation.py  fetch_acled.py  fetch_acled_monthly.py  fetch_basel_aml.py  fetch_blackmarble_monthly.py  fetch_bti.py  fetch_comtrade_monthly.py  fetch_eia.py  fetch_eia_monthly.py  fetch_fao.py  fetch_fragile_states.py  fetch_fred.py  fetch_fred_monthly.py  fetch_freedom_house.py  fetch_gdelt.py  fetch_gdelt_monthly.py  fetch_ghi.py  fetch_gtrends.py  fetch_guardian.py  fetch_guardian_monthly.py  fetch_hdi.py  fetch_ilostat.py  fetch_imf.py  fetch_imts_monthly.py  fetch_international_news.py  fetch_ofac.py  fetch_ofac_network.py  fetch_opensky.py  fetch_owid_extras.py  fetch_pts.py  fetch_regional.py  fetch_rsf.py  fetch_static.py  fetch_ucdp.py  (+13 more)
(+152 files in other folders)
